chore: init shadcn and tailwind css

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "extends": "@repo/config/tsconfig.json",
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
     "moduleResolution": "bundler",
     "jsx": "react-jsx",
     "types": ["vitest/globals"]
