--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,10 +31,12 @@
     "clsx": "^2.1.1",
     "firebase": "^12.9.0",
     "lucide-react": "^0.563.0",
+    "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.71.1",
     "react-router-dom": "^7.13.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.25.76",
