--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -10,6 +10,5 @@
     "jsx": "react-jsx",
     "types": ["vitest/globals"]
   },
-  "include": ["src", "vite.config.ts"],
-  "ignoreDeprecations": "5.0"
+  "include": ["src", "vite.config.ts"]
 }
