--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -59,7 +59,7 @@
     "jsdom": "^25.0.1",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
-    "typescript": "5.5.4",
+    "typescript": "^5.6.0",
     "vite": "^5.1.4",
     "vitest": "^2.1.8"
   }
