--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "extends": "@repo/config/tsconfig.json",
   "compilerOptions": {
-    // "baseUrl": ".",
-    // "ignoreDeprecations": "6.0",
+    "baseUrl": ".",
+    "ignoreDeprecations": "6.0",
     "paths": {
       "@/*": ["./src/*"]
     },
