--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
     "syncpack": "^13.0.0",
-    "turbo": "^2.7.5"
+    "turbo": "^2.7.5",
+    "typescript": "^5.9.3"
   },
   "packageManager": "pnpm@8.15.6",
   "engines": {
