--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -18,13 +18,13 @@
   "dependencies": {
     "@repo/shared": "workspace:*",
     "@trpc/server": "^11.0.0-rc.660",
-    "zod": "^3.23.8"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@repo/config": "workspace:*",
     "@repo/eslint-config": "workspace:*",
     "eslint": "^8.57.0",
-    "typescript": "5.5.4",
+    "typescript": "^5.9.3",
     "vitest": "^2.1.8"
   }
 }
