--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -108,21 +108,13 @@ jobs:
       # service account. No explicit project ID needed.
       # ======================================================================
       - name: Deploy to Firebase Hosting
-        # run: |
-        #   npm install -g firebase-tools
-        #   firebase deploy --only hosting
         run: |
-          export FIREBASE_TOKEN=$(gcloud auth print-access-token)
-          firebase deploy --only hosting --project ${{ env.GCP_PROJECT_ID }} --token "$FIREBASE_TOKEN"
+          npm install -g firebase-tools
+          firebase deploy --only hosting
 
       - name: Deploy Firebase Functions
-        run: |
-          export FIREBASE_TOKEN=$(gcloud auth print-access-token)
-          firebase deploy --only functions --project ${{ env.GCP_PROJECT_ID }} --token "$FIREBASE_TOKEN"
+        run: firebase deploy --only functions
         continue-on-error: true # Skip if no functions configured
-
-        # run: firebase deploy --only functions
-        # continue-on-error: true # Skip if no functions configured
 
       - name: Deployment Summary
         run: |
