--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -110,7 +110,7 @@ jobs:
       - name: Deploy to Firebase Hosting
         run: |
           npm install -g firebase-tools
-          firebase deploy --only hosting
+          firebase deploy --only hosting --token "${{ secrets.FIREBASE_TOKEN }}"
 
       - name: Deploy Firebase Functions
         run: firebase deploy --only functions
