--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -112,9 +112,9 @@ jobs:
           npm install -g firebase-tools
           firebase deploy --only hosting --token "${{ secrets.FIREBASE_TOKEN }}"
 
-      - name: Deploy Firebase Functions
-        run: firebase deploy --only functions
-        continue-on-error: true # Skip if no functions configured
+      # - name: Deploy Firebase Functions
+      #   run: firebase deploy --only functions
+      #   continue-on-error: true # Skip if no functions configured
 
       - name: Deployment Summary
         run: |
