--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -121,7 +121,7 @@ jobs:
     environment:
       name: main
       # TODO: Update with your production URL
-      url: https://example.com
+      url: https://hytel-projects.web.app
 
     steps:
       - name: Checkout repository
@@ -158,16 +158,22 @@ jobs:
           workload_identity_provider: ${{ secrets.GCP_WORKLOAD_IDENTITY_PROVIDER }}
           service_account: ${{ secrets.GCP_SA_EMAIL }}
 
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+
+      - name: Install Firebase CLI
+        run: npm install -g firebase-tools
+
       # ======================================================================
       # Deploy to Firebase
       # ======================================================================
       - name: Deploy to Firebase Hosting
         run: |
           npm install -g firebase-tools
-          firebase deploy --only hosting
+          firebase deploy --only hosting --token "${{ secrets.FIREBASE_TOKEN }}"
 
       - name: Deploy Firebase Functions
-        run: firebase deploy --only functions
+        run: firebase deploy --only functions --token "${{ secrets.FIREBASE_TOKEN }}"
         continue-on-error: true
 
       - name: Deployment Summary
