--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -172,9 +172,9 @@ jobs:
           npm install -g firebase-tools
           firebase deploy --only hosting --token "${{ secrets.FIREBASE_TOKEN }}"
 
-      - name: Deploy Firebase Functions
-        run: firebase deploy --only functions --token "${{ secrets.FIREBASE_TOKEN }}"
-        continue-on-error: true
+      # - name: Deploy Firebase Functions
+      #   run: firebase deploy --only functions --token "${{ secrets.FIREBASE_TOKEN }}"
+      #   continue-on-error: true
 
       - name: Deployment Summary
         run: |
