--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -80,7 +80,7 @@ jobs:
         run: pnpm build
         env:
           # TODO: Update with your dev API URL
-          VITE_API_URL: https://dev-api.example.com
+          # VITE_API_URL: https://dev-api.example.com
           VITE_FIREBASE_API_KEY: ${{ secrets.VITE_FIREBASE_API_KEY }}
           VITE_FIREBASE_AUTH_DOMAIN: ${{ secrets.VITE_FIREBASE_AUTH_DOMAIN }}
           VITE_FIREBASE_PROJECT_ID: ${{ secrets.VITE_FIREBASE_PROJECT_ID }}
